fix(Addresses): Transfer button now shows on mobile large + search width fix

--- a/assets/css/modules/_settings.scss
+++ b/assets/css/modules/_settings.scss
@@ -205,3 +205,9 @@ table.accounts-container {
     padding: 15px 15px;   
   }
 }
+
+@media (max-width: 395px) {
+  .hidden-xxs {
+    display: none;   
+  }
+}
